# OCR-Gemini

./: .gitignore  README.md  chinese_translation_example.py  config.py  config_template.py  gemini_ocr.py  manga_order_test.py  project_structure.py  pyproject.toml  requirements.txt  run_example.py  setup_example.py
input/: README.md
output/: README.md
output/backups/: README.md
output/debug/: README.md
output/individual_pages/: README.md
output/logs/: README.md
samples/: README.md
scripts/: cleanup.py  quick_start.py
